--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,92 @@
 /*  your css code here. If applicable */
+body{
+	width:90%;
+	margin:auto;
+}
+.title{
+	font-size:50px;
+	text-align:center;
+}
+span{
+	color:blue;
+}
+input{
+	height:30px;
+	width:100%;
+}
+#submit{
+	background-color:#1877F2;
+	color:white;
+	padding:6px;
+	border-radius:3px;
+	border:0px;
+}
+button:hover{
+	cursor:pointer;
+}
+table{
+	margin-top:40px;
+	width:100%;
+	border-collapse:collapse;
+}
+tr{
+	border-bottom:2px solid #B0B0B0;
+}
+tr.border{
+	border-bottom:2px solid black;
+}
+tr{
+	background-color:#F8F8F8;
+}
+th{
+	background-color:white;
+	width:27%;
+	text-align:left;
+}
+td,th{
+	padding:10px 5px;
+}
+.delete{
+	background-color:red;
+	border:none;
+	padding:2px;
+}
+ 
+--------------------------
+ 
+JS
+ 
+//your JS code here. If required.
+document.getElementById("submit").addEventListener("click", function(event) {
+      event.preventDefault();
+      addBookToList();
+    });
+let tbody=document.getElementById("book-list");
+function addBookToList(){
+	let row=tbody.insertRow();
+	tbody.append(row);
+	let td1=row.insertCell(0);
+	td1.innerText=document.getElementById("title").value;
+	let td2=row.insertCell(1);
+	td2.innerText=document.getElementById("author").value;
+	let td3=row.insertCell(2);
+	td3.innerText=document.getElementById("isbn").value;
+	let td4=row.insertCell(3);
+	let newBtn = document.createElement('button');
+	newBtn.className="delete";
+    newBtn.innerText = 'X';
+	row.append(td1);
+	row.append(td2);
+	row.append(td3);
+	row.append(td4);
+	td4.append(newBtn);
+ 
+	var deleteButtons = document.getElementsByClassName("delete");
+      for (var i = 0; i < deleteButtons.length; i++) {
+        deleteButtons[i].addEventListener("click", function(event) {
+          event.target.parentNode.parentNode.remove();
+        });
+      }
+ 
+	
+}
